--- a/static/app.css
+++ b/static/app.css
@@ -1,4 +1,13 @@
-td {
+.letter {
     border: 1px solid black;
-    margin: 50px;
+    padding: 10px 20px;
+}
+
+.center {
+    text-align: center;
+}
+
+.center-table {
+    margin-left: auto;
+    margin-right: auto;
 }
