fixed form not submitting

--- a/templates/board.html
+++ b/templates/board.html
@@ -14,11 +14,11 @@
   {% endfor %}
 </table>
 
-<form action="">
+<form id="guess-form" action="/submit-word">
   <label for="guess">guess</label>
   <input type="text" name="guess" id="">
   <div>
-    <button type="submit" class="btn btn-primary">submit</button>
+    <button id="submit-guess" type="submit" class="btn btn-primary">submit</button>
   </div>
 </form>
 
