fixed flask submission of guesses

--- a/templates/board.html
+++ b/templates/board.html
@@ -14,11 +14,11 @@
   {% endfor %}
 </table>
 
-<form id="guess-form" action="/submit-word">
+<form action="" id="guess-form">
   <label for="guess">guess</label>
-  <input type="text" name="guess" id="">
+  <input type="text" name="guess" id="inputword">
   <div>
-    <button id="submit-guess" type="submit" class="btn btn-primary">submit</button>
+    <button id="submit-guess" class="btn btn-primary">submit</button>
   </div>
 </form>
 
